<resources>
    <string name="app_name">need</string>
    <string name="Lojas">lojas</string>
    <string name="Produtos">produtos</string>
    <string name="Showing_produto">Showing produto</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string name="title_activity_login">
        Login
    </string>

    <string name="invalid_email">
        Forneça um e-mail válido.
    </string>
    <string name="invalid_password">
        Mínimo de 6 caracteres.
    </string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="forgot_my_password">
        Esqueci minha senha
    </string>
    <string name="sign_in">Entrar</string>
    <string name="sign_in_going">Entrando&#8230;</string>
    <string name="or">ou</string>
    <string name="sign_up">
        Criar minha conta
    </string>
    <string name="privacy_policy">
        Políticas de privacidade
    </string>
    <string name="invalid_login">
        Dados de login inválidos.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
