<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".ui.activits.LojasActivity"
    tools:showIn="@layout/content_login">

    <FrameLayout
        android:id="@+id/fl_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/ll_container_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/txtemail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="17dp"
                    android:paddingTop="13dp"
                    android:paddingRight="17dp"
                    android:paddingBottom="13dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/txtpassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-1dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="17dp"
                    android:paddingTop="13dp"
                    android:paddingRight="17dp"
                    android:paddingBottom="13dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/TextViewLink"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_my_password"
                app:layout_constraintLeft_toLeftOf="@+id/ll_container_fields"
                app:layout_constraintTop_toBottomOf="@+id/ll_container_fields" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bt_nav_header_login_bg"
                android:paddingLeft="38dp"
                android:paddingRight="38dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
                app:layout_constraintTop_toBottomOf="@+id/ll_container_fields" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/or"
                android:textColor="@color/colorText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/TextViewLink"
                android:text="@string/sign_up"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_or" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                style="@style/TextViewLink"
                android:layout_marginTop="0dp"
                android:text="@string/privacy_policy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/fl_proxy_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundProxy"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:theme="@style/ProgressBarGreyProxy" />
        </FrameLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>